--- a/notebooks/paper_pipline.ipynb
+++ b/notebooks/paper_pipline.ipynb
@@ -19,8 +19,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-21T13:09:44.077890Z",
-     "start_time": "2024-12-21T13:09:44.074264Z"
+     "end_time": "2024-12-23T12:22:48.016989Z",
+     "start_time": "2024-12-23T12:22:48.008205Z"
     }
    },
    "id": "dde76cebf871e8c3",
@@ -44,8 +44,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-21T13:09:45.407315Z",
-     "start_time": "2024-12-21T13:09:44.078963Z"
+     "end_time": "2024-12-23T12:22:48.948514Z",
+     "start_time": "2024-12-23T12:22:48.030705Z"
     }
    },
    "id": "e9ed6a4c09332b67",
@@ -71,8 +71,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-21T13:09:45.411779Z",
-     "start_time": "2024-12-21T13:09:45.407981Z"
+     "end_time": "2024-12-23T12:22:48.958052Z",
+     "start_time": "2024-12-23T12:22:48.950386Z"
     }
    },
    "id": "f3d83b1cd99d1de9",
@@ -87,12 +87,54 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-21T13:09:45.415659Z",
-     "start_time": "2024-12-21T13:09:45.412575Z"
+     "end_time": "2024-12-23T12:22:48.964458Z",
+     "start_time": "2024-12-23T12:22:48.960385Z"
     }
    },
    "id": "362ff279af79b465",
    "execution_count": 4
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "nodes = g.nodes()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-12-23T12:22:48.970800Z",
+     "start_time": "2024-12-23T12:22:48.967594Z"
+    }
+   },
+   "id": "50abdb860b170c92",
+   "execution_count": 5
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "def dst(da, db):\n",
+    "    return ((da['x'] - db['x']) ** 2 + (da['y'] - db['y']) ** 2) ** 0.5 / 360 * 2 * np.pi * 6371.01 * 1000 * 0.56\n",
+    "\n",
+    "\n",
+    "def node_dst(u, v):\n",
+    "    da = nodes[u]\n",
+    "    db = nodes[v]\n",
+    "    return dst(da, db)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-12-23T12:22:48.977988Z",
+     "start_time": "2024-12-23T12:22:48.972999Z"
+    }
+   },
+   "id": "e3e09a91603a5c7d",
+   "execution_count": 6
   },
   {
    "cell_type": "code",
@@ -103,7 +145,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "1e8d597768db45fcae22c45d59a1e21f"
+       "model_id": "07fb04e20ced4eb59489d7f080317859"
       }
      },
      "metadata": {},
@@ -115,7 +157,26 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "039f8211a9a246648397fde5a4563318"
+       "model_id": "d920f3f305474a6998204e9c50962718"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-12-23 15:22:58,638 - root - INFO - cms: 26\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "  0%|          | 0/723 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "b172118a897b48d3862e5acf00a4bdf2"
       }
      },
      "metadata": {},
@@ -123,27 +184,36 @@
     }
    ],
    "source": [
+    "from scripts.path_findings.alt_builder import RandomAltBuilder, ClusterAltBuilder\n",
+    "\n",
     "cms_resolver = clustering.LouvainCommunityResolver(resolution=25)\n",
     "cg = centroids_graph_builder.CentroidGraphBuilder().build(g, cms_resolver)\n",
     "\n",
     "baseline = dijkstra_pfa.Dijkstra(g)\n",
     "\n",
-    "test_alg = excraction_pfa.ExtractionPfa(\n",
-    "    g = g,\n",
-    "    cg=cg,\n",
-    "    upper=dijkstra_pfa.Dijkstra(cg.g),\n",
-    "    down=dijkstra_pfa.Dijkstra(g)\n",
-    ")"
+    "# test_alg = excraction_pfa.ExtractionPfa(\n",
+    "#     g = g,\n",
+    "#     cg=cg,\n",
+    "#     upper=dijkstra_pfa.Dijkstra(cg.g),\n",
+    "#     down=dijkstra_pfa.Dijkstra(g)\n",
+    "# )\n",
+    "\n",
+    "\n",
+    "# test_alg = dijkstra_pfa.AStar(\n",
+    "#     g = g,\n",
+    "#     h = node_dst\n",
+    "# )\n",
+    "test_alg = ClusterAltBuilder(1).build_ch_pfa(g)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-21T13:09:45.482222Z",
-     "start_time": "2024-12-21T13:09:45.416116Z"
+     "end_time": "2024-12-23T12:23:00.331051Z",
+     "start_time": "2024-12-23T12:22:58.345660Z"
     }
    },
    "id": "4325b5d0ed6e8858",
-   "execution_count": 5
+   "execution_count": 10
   },
   {
    "cell_type": "code",
@@ -157,11 +227,11 @@
     },
     {
      "data": {
-      "text/plain": "find paths:   0%|          | 0/100 [00:00<?, ?it/s]",
+      "text/plain": "find paths:   0%|          | 0/250 [00:00<?, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "df18de5021404dec86c7670f7bbba9d4"
+       "model_id": "28cdbd4b46524eeda6b5410b17ccbdb6"
       }
      },
      "metadata": {},
@@ -176,11 +246,11 @@
     },
     {
      "data": {
-      "text/plain": "find paths:   0%|          | 0/100 [00:00<?, ?it/s]",
+      "text/plain": "find paths:   0%|          | 0/250 [00:00<?, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "54f864bbcf60491c9fdb39f85853fda0"
+       "model_id": "20ccc4ae133047e691ed175a50cf56bb"
       }
      },
      "metadata": {},
@@ -195,11 +265,11 @@
     },
     {
      "data": {
-      "text/plain": "find paths:   0%|          | 0/100 [00:00<?, ?it/s]",
+      "text/plain": "find paths:   0%|          | 0/250 [00:00<?, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "aadb8a2a8a9d45ea9292f0de03b7ddd9"
+       "model_id": "8bc8e94c28ad4a039ea0ac600dfa5f96"
       }
      },
      "metadata": {},
@@ -214,125 +284,11 @@
     },
     {
      "data": {
-      "text/plain": "find paths:   0%|          | 0/100 [00:00<?, ?it/s]",
+      "text/plain": "find paths:   0%|          | 0/250 [00:00<?, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "dfa31f5c67dd49ca8e5987f055ff0838"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start 4\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "find paths:   0%|          | 0/100 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "9c0d01412df14749917f136ff209b93c"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start 5\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "find paths:   0%|          | 0/100 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "586b7b2737394c61966d09f49d3a968c"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start 6\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "find paths:   0%|          | 0/100 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "9f66b127f1c54903b346959d6758eb82"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start 7\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "find paths:   0%|          | 0/100 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "ee106ae33b994de1a4244231cec47984"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start 8\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "find paths:   0%|          | 0/100 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "59b2c4318e7b41e193b55e52419fa25a"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start 9\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "find paths:   0%|          | 0/100 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "cccb4a4974a64c9985987e033d144ae2"
+       "model_id": "acdc4c93f3f14613b28b699eda6db6e1"
       }
      },
      "metadata": {},
@@ -344,27 +300,27 @@
     "    baseline=baseline,\n",
     "    test_algorithm=test_alg,\n",
     "    points=points,\n",
-    "    workers=10\n",
+    "    workers=4\n",
     ").compare()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-21T13:28:58.221655Z",
-     "start_time": "2024-12-21T13:28:56.605177Z"
+     "end_time": "2024-12-23T12:23:03.778527Z",
+     "start_time": "2024-12-23T12:23:00.333132Z"
     }
    },
    "id": "ae3121ce02585050",
-   "execution_count": 8
+   "execution_count": 11
   },
   {
    "cell_type": "code",
    "outputs": [
     {
      "data": {
-      "text/plain": "\n        err_max:    180.7498\n        err_min:    0.0000\n        err_median: 5.8505\n        err_mean:   9.0262\n        \n        acceleration_max:    8.3152\n        acceleration_min:    0.4268\n        acceleration_median: 2.4001\n        acceleration_mean:   2.5081\n        "
+      "text/plain": "\n        err_max:    0.0000\n        err_min:    0.0000\n        err_median: 0.0000\n        err_mean:   0.0000\n        \n        acceleration_max:    6.5789\n        acceleration_min:    0.1615\n        acceleration_median: 1.1094\n        acceleration_mean:   1.2626\n        "
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,21 +331,26 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-21T13:28:58.770046Z",
-     "start_time": "2024-12-21T13:28:58.764906Z"
+     "end_time": "2024-12-23T12:23:03.787055Z",
+     "start_time": "2024-12-23T12:23:03.780590Z"
     }
    },
    "id": "987dc47fb30c404",
-   "execution_count": 9
+   "execution_count": 12
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-12-23T12:22:54.565482Z",
+     "start_time": "2024-12-23T12:22:54.562027Z"
+    }
    },
-   "id": "a693144e02e9f060"
+   "id": "a693144e02e9f060",
+   "execution_count": 9
   }
  ],
  "metadata": {
