--- a/notebooks/paper_pipline.ipynb
+++ b/notebooks/paper_pipline.ipynb
@@ -17,14 +17,10 @@
     "root.addHandler(handler)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-12-21T13:09:44.077890Z",
-     "start_time": "2024-12-21T13:09:44.074264Z"
-    }
+    "collapsed": false
    },
    "id": "dde76cebf871e8c3",
-   "execution_count": 1
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -42,26 +38,14 @@
     "import scripts"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-12-21T13:09:45.407315Z",
-     "start_time": "2024-12-21T13:09:44.078963Z"
-    }
+    "collapsed": false
    },
    "id": "e9ed6a4c09332b67",
-   "execution_count": 2
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "723 1046\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "GRAPH_ID = 'R13470549'  # R13470549 R2555133 R3766483\n",
     "# примеры id есть в graph_osm_loader.py\n",
@@ -69,14 +53,10 @@
     "print(len(g.nodes), len(g.edges))"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-12-21T13:09:45.411779Z",
-     "start_time": "2024-12-21T13:09:45.407981Z"
-    }
+    "collapsed": false
    },
    "id": "f3d83b1cd99d1de9",
-   "execution_count": 3
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -85,43 +65,14 @@
     "points = utils.read_points(GRAPH_ID, g, num=1000)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-12-21T13:09:45.415659Z",
-     "start_time": "2024-12-21T13:09:45.412575Z"
-    }
+    "collapsed": false
    },
    "id": "362ff279af79b465",
-   "execution_count": 4
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "find centroids:   0%|          | 0/143 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "1e8d597768db45fcae22c45d59a1e21f"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "find edges:   0%|          | 0/143 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "039f8211a9a246648397fde5a4563318"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cms_resolver = clustering.LouvainCommunityResolver(resolution=25)\n",
     "cg = centroids_graph_builder.CentroidGraphBuilder().build(g, cms_resolver)\n",
@@ -136,209 +87,14 @@
     ")"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-12-21T13:09:45.482222Z",
-     "start_time": "2024-12-21T13:09:45.416116Z"
-    }
+    "collapsed": false
    },
    "id": "4325b5d0ed6e8858",
-   "execution_count": 5
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start 0\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "find paths:   0%|          | 0/100 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "df18de5021404dec86c7670f7bbba9d4"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start 1\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "find paths:   0%|          | 0/100 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "54f864bbcf60491c9fdb39f85853fda0"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start 2\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "find paths:   0%|          | 0/100 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "aadb8a2a8a9d45ea9292f0de03b7ddd9"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start 3\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "find paths:   0%|          | 0/100 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "dfa31f5c67dd49ca8e5987f055ff0838"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start 4\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "find paths:   0%|          | 0/100 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "9c0d01412df14749917f136ff209b93c"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start 5\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "find paths:   0%|          | 0/100 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "586b7b2737394c61966d09f49d3a968c"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start 6\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "find paths:   0%|          | 0/100 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "9f66b127f1c54903b346959d6758eb82"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start 7\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "find paths:   0%|          | 0/100 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "ee106ae33b994de1a4244231cec47984"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start 8\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "find paths:   0%|          | 0/100 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "59b2c4318e7b41e193b55e52419fa25a"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start 9\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "find paths:   0%|          | 0/100 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "cccb4a4974a64c9985987e033d144ae2"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "stat = pipeline.PfaComparator(\n",
     "    baseline=baseline,\n",
@@ -348,39 +104,22 @@
     ").compare()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-12-21T13:28:58.221655Z",
-     "start_time": "2024-12-21T13:28:56.605177Z"
-    }
+    "collapsed": false
    },
    "id": "ae3121ce02585050",
-   "execution_count": 8
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "\n        err_max:    180.7498\n        err_min:    0.0000\n        err_median: 5.8505\n        err_mean:   9.0262\n        \n        acceleration_max:    8.3152\n        acceleration_min:    0.4268\n        acceleration_median: 2.4001\n        acceleration_mean:   2.5081\n        "
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "stat"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-12-21T13:28:58.770046Z",
-     "start_time": "2024-12-21T13:28:58.764906Z"
-    }
+    "collapsed": false
    },
    "id": "987dc47fb30c404",
-   "execution_count": 9
+   "execution_count": null
   },
   {
    "cell_type": "code",
