--- a/notebooks/paper_pipline.ipynb
+++ b/notebooks/paper_pipline.ipynb
@@ -19,12 +19,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-23T15:00:43.288608Z",
-     "start_time": "2024-12-23T15:00:43.280989Z"
+     "end_time": "2024-12-26T12:01:21.794347Z",
+     "start_time": "2024-12-26T12:01:21.790535Z"
     }
    },
    "id": "dde76cebf871e8c3",
-   "execution_count": 1
+   "execution_count": 26
   },
   {
    "cell_type": "code",
@@ -38,18 +38,17 @@
     "from scripts import graph_osm_loader\n",
     "from scripts import pipeline, centroids_graph_builder, clustering\n",
     "from scripts.path_findings import excraction_pfa, dijkstra_pfa\n",
-    "from scripts import utils\n",
-    "import scripts"
+    "from scripts import utils"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-23T15:00:44.219738Z",
-     "start_time": "2024-12-23T15:00:43.464229Z"
+     "end_time": "2024-12-26T12:01:21.803853Z",
+     "start_time": "2024-12-26T12:01:21.798276Z"
     }
    },
    "id": "e9ed6a4c09332b67",
-   "execution_count": 2
+   "execution_count": 27
   },
   {
    "cell_type": "code",
@@ -63,12 +62,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-23T15:00:44.225Z",
-     "start_time": "2024-12-23T15:00:44.221700Z"
+     "end_time": "2024-12-26T12:01:21.806146Z",
+     "start_time": "2024-12-26T12:01:21.804565Z"
     }
    },
    "id": "a250dda702bca2cb",
-   "execution_count": 3
+   "execution_count": 28
   },
   {
    "cell_type": "code",
@@ -77,7 +76,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9507 14804\n"
+      "9512 14818\n"
      ]
     }
    ],
@@ -90,12 +89,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-23T15:00:45.696669Z",
-     "start_time": "2024-12-23T15:00:45.645971Z"
+     "end_time": "2024-12-26T12:01:21.823853Z",
+     "start_time": "2024-12-26T12:01:21.806822Z"
     }
    },
    "id": "f3d83b1cd99d1de9",
-   "execution_count": 6
+   "execution_count": 29
   },
   {
    "cell_type": "code",
@@ -104,7 +103,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21702 30009\n"
+      "21632 29905\n"
      ]
     }
    ],
@@ -117,12 +116,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-23T15:00:44.404894Z",
-     "start_time": "2024-12-23T15:00:44.272904Z"
+     "end_time": "2024-12-26T12:01:21.948876Z",
+     "start_time": "2024-12-26T12:01:21.824638Z"
     }
    },
    "id": "69244312a8318203",
-   "execution_count": 5
+   "execution_count": 30
   },
   {
    "cell_type": "code",
@@ -131,12 +130,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "59342 85597\n"
+      "21632 29905\n"
      ]
     }
    ],
    "source": [
-    "GRAPH_ID = 'R3766483'  # R13470549 R2555133 R3766483\n",
+    "GRAPH_ID = 'R435514'  # R13470549 R2555133 R3766483\n",
     "# примеры id есть в graph_osm_loader.py\n",
     "g = graph_osm_loader.get_graph(GRAPH_ID)\n",
     "print(len(g.nodes), len(g.edges))"
@@ -144,12 +143,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-23T13:53:10.062055Z",
-     "start_time": "2024-12-23T13:53:09.707032Z"
+     "end_time": "2024-12-26T12:07:09.193771Z",
+     "start_time": "2024-12-26T12:07:09.156217Z"
     }
    },
    "id": "63723175d0832542",
-   "execution_count": 29
+   "execution_count": 69
   },
   {
    "cell_type": "code",
@@ -160,12 +159,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-23T15:00:47.424236Z",
-     "start_time": "2024-12-23T15:00:47.416334Z"
+     "end_time": "2024-12-26T12:07:10.067208Z",
+     "start_time": "2024-12-26T12:07:09.966930Z"
     }
    },
    "id": "362ff279af79b465",
-   "execution_count": 7
+   "execution_count": 70
   },
   {
    "cell_type": "code",
@@ -176,12 +175,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-23T15:00:47.633820Z",
-     "start_time": "2024-12-23T15:00:47.629940Z"
+     "end_time": "2024-12-26T12:07:10.402751Z",
+     "start_time": "2024-12-26T12:07:10.400760Z"
     }
    },
    "id": "50abdb860b170c92",
-   "execution_count": 8
+   "execution_count": 71
   },
   {
    "cell_type": "code",
@@ -202,12 +201,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-23T15:00:47.861378Z",
-     "start_time": "2024-12-23T15:00:47.855372Z"
+     "end_time": "2024-12-26T12:07:10.821753Z",
+     "start_time": "2024-12-26T12:07:10.819350Z"
     }
    },
    "id": "e3e09a91603a5c7d",
-   "execution_count": 9
+   "execution_count": 72
   },
   {
    "cell_type": "code",
@@ -218,23 +217,23 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-23T15:00:48.043397Z",
-     "start_time": "2024-12-23T15:00:48.034421Z"
+     "end_time": "2024-12-26T12:07:11.236942Z",
+     "start_time": "2024-12-26T12:07:11.231735Z"
     }
    },
    "id": "65299d71fa84fb68",
-   "execution_count": 10
+   "execution_count": 73
   },
   {
    "cell_type": "code",
    "outputs": [
     {
      "data": {
-      "text/plain": "find centroids:   0%|          | 0/109 [00:00<?, ?it/s]",
+      "text/plain": "find centroids:   0%|          | 0/4878 [00:00<?, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "f338180bc38a48eaa2ff89331a8e4e34"
+       "model_id": "29f1920e537f4024b3ea9d122d19197d"
       }
      },
      "metadata": {},
@@ -242,11 +241,11 @@
     },
     {
      "data": {
-      "text/plain": "find edges:   0%|          | 0/109 [00:00<?, ?it/s]",
+      "text/plain": "find edges:   0%|          | 0/4878 [00:00<?, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "8c86cb247a11454a953602d5f03218ac"
+       "model_id": "06b43762c36242f2aacdb3eae0f7a575"
       }
      },
      "metadata": {},
@@ -254,16 +253,16 @@
     },
     {
      "data": {
-      "text/plain": "(10.449612855911255, 1.374359130859375, 68.13776397705078)"
+      "text/plain": "(6.3775482177734375, 11.322639465332031, 22.515457153320312)"
      },
-     "execution_count": 16,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "cms_resolver = clustering.LouvainCommunityResolver(resolution=2)\n",
+    "cms_resolver = clustering.LouvainKMeansCommunityResolver(resolution=1000)\n",
     "\n",
     "t, cg = centroids_graph_builder.CentroidGraphBuilder().build_with_time(g, cms_resolver)\n",
     "t, asizeof(cg)/1024/1024, asizeof(g)/1024/1024"
@@ -271,29 +270,41 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-23T15:02:58.430884Z",
-     "start_time": "2024-12-23T15:02:42.697694Z"
+     "end_time": "2024-12-26T12:09:46.001987Z",
+     "start_time": "2024-12-26T12:09:39.120150Z"
     }
    },
    "id": "c356a17ee7eebe16",
-   "execution_count": 16
+   "execution_count": 83
   },
   {
    "cell_type": "code",
    "outputs": [
     {
      "data": {
-      "text/plain": "  0%|          | 0/109 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "34fc4f975d7e4b668ace79c8aee67f5a"
-      }
+      "text/plain": "181.54055786132812"
      },
+     "execution_count": 84,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "len(cg.cms) ** 2 * 8 /1024/1024"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-12-26T12:09:46.005923Z",
+     "start_time": "2024-12-26T12:09:46.002981Z"
+    }
+   },
+   "id": "d9abb00af9bb47ed",
+   "execution_count": 84
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
    "source": [
     "from scripts.path_findings.arc_flags_builder import ArcFlagsBuilder\n",
     "from scripts.path_findings.alt_builder import RandomAltBuilder, ClusterAltBuilder\n",
@@ -307,7 +318,7 @@
     "#     down=dijkstra_pfa.Dijkstra(g)\n",
     "# )\n",
     "\n",
-    "test_alg = ArcFlagsBuilder().build(g, cg.cls2hubs)\n",
+    "# test_alg = ArcFlagsBuilder().build(g, cg.cls2hubs)\n",
     "# test_alg = dijkstra_pfa.AStar(\n",
     "#     g = g,\n",
     "#     h = node_dst\n",
@@ -317,12 +328,69 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-23T15:03:02.194939Z",
-     "start_time": "2024-12-23T15:02:58.432525Z"
+     "end_time": "2024-12-26T12:09:47.543561Z",
+     "start_time": "2024-12-26T12:09:47.540082Z"
     }
    },
    "id": "4325b5d0ed6e8858",
-   "execution_count": 17
+   "execution_count": 85
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "4878"
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(cg.cms)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-12-26T12:09:47.836693Z",
+     "start_time": "2024-12-26T12:09:47.832574Z"
+    }
+   },
+   "id": "449b92922069dceb",
+   "execution_count": 86
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "  0%|          | 0/10 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "a53369d677ab447aabcf39f6dab53c4f"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from scripts.path_findings.h_search_builder import MinClusterDistance\n",
+    "from scripts.clustering import LouvainKMeansCommunityResolver\n",
+    "\n",
+    "test_alg = MinClusterDistance(workers=10).build_astar(g, cg.cms)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-12-26T12:10:26.006288Z",
+     "start_time": "2024-12-26T12:09:48.137466Z"
+    }
+   },
+   "id": "3ca62bb28a1a6b05",
+   "execution_count": 87
   },
   {
    "cell_type": "code",
@@ -336,11 +404,11 @@
     },
     {
      "data": {
-      "text/plain": "find paths:   0%|          | 0/167 [00:00<?, ?it/s]",
+      "text/plain": "find paths:   0%|          | 0/100 [00:00<?, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "86c1daf5911c462787717cd6f0b5ddc6"
+       "model_id": "7580a325b5da4f80a503a2ebbefadcb6"
       }
      },
      "metadata": {},
@@ -355,11 +423,11 @@
     },
     {
      "data": {
-      "text/plain": "find paths:   0%|          | 0/167 [00:00<?, ?it/s]",
+      "text/plain": "find paths:   0%|          | 0/100 [00:00<?, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "cec094bf948340e08111bddc410a0242"
+       "model_id": "06347e3186294330b15acdf46adba5fa"
       }
      },
      "metadata": {},
@@ -374,11 +442,11 @@
     },
     {
      "data": {
-      "text/plain": "find paths:   0%|          | 0/167 [00:00<?, ?it/s]",
+      "text/plain": "find paths:   0%|          | 0/100 [00:00<?, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "857b9fc80dd64a09a46d2b81669c561c"
+       "model_id": "62bdb4b91dd64a43a0451d543740258d"
       }
      },
      "metadata": {},
@@ -393,11 +461,11 @@
     },
     {
      "data": {
-      "text/plain": "find paths:   0%|          | 0/167 [00:00<?, ?it/s]",
+      "text/plain": "find paths:   0%|          | 0/100 [00:00<?, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "66ce69d464c042cab3f043eb7683a0bf"
+       "model_id": "781fd0c05a4b4760aeaef2cb56690e4e"
       }
      },
      "metadata": {},
@@ -412,11 +480,11 @@
     },
     {
      "data": {
-      "text/plain": "find paths:   0%|          | 0/166 [00:00<?, ?it/s]",
+      "text/plain": "find paths:   0%|          | 0/100 [00:00<?, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "31e4b60113454adfaddb3d0039978198"
+       "model_id": "23d7d696486c44f19383965d560e1903"
       }
      },
      "metadata": {},
@@ -431,11 +499,87 @@
     },
     {
      "data": {
-      "text/plain": "find paths:   0%|          | 0/166 [00:00<?, ?it/s]",
+      "text/plain": "find paths:   0%|          | 0/100 [00:00<?, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "7074ae30190a4d42b46d6be292926d48"
+       "model_id": "d506054998354656a923b157f140e2eb"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start 6\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "find paths:   0%|          | 0/100 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "13ad15086ee6417ea58c41583ed8de96"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start 7\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "find paths:   0%|          | 0/100 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "34c8e86306fc4a538b00a8a0f989f2be"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start 8\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "find paths:   0%|          | 0/100 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "ab744a3da8b24dec9bdccd98aa0d0a3e"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start 9\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "find paths:   0%|          | 0/100 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "2b1e951fc7134629a3555766a38137b7"
       }
      },
      "metadata": {},
@@ -447,27 +591,27 @@
     "    baseline=baseline,\n",
     "    test_algorithm=test_alg,\n",
     "    points=points,\n",
-    "    workers=6\n",
+    "    workers=10\n",
     ").compare()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-23T15:03:53.092433Z",
-     "start_time": "2024-12-23T15:03:02.196681Z"
+     "end_time": "2024-12-26T12:10:42.770074Z",
+     "start_time": "2024-12-26T12:10:26.007206Z"
     }
    },
    "id": "ae3121ce02585050",
-   "execution_count": 18
+   "execution_count": 88
   },
   {
    "cell_type": "code",
    "outputs": [
     {
      "data": {
-      "text/plain": "\n        err_max:    0.0000\n        err_min:    0.0000\n        err_median: 0.0000\n        err_mean:   0.0000\n        \n        acceleration_max:    2.8983\n        acceleration_min:    0.5080\n        acceleration_median: 0.9242\n        acceleration_mean:   0.9503\n        "
+      "text/plain": "\n        err_max:    0.0000\n        err_min:    0.0000\n        err_median: 0.0000\n        err_mean:   0.0000\n        \n        acceleration_max:    321.0009\n        acceleration_min:    0.8936\n        acceleration_median: 24.8948\n        acceleration_mean:   33.0873\n        "
      },
-     "execution_count": 19,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,79 +622,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-23T15:03:53.101250Z",
-     "start_time": "2024-12-23T15:03:53.095321Z"
+     "end_time": "2024-12-26T12:10:42.774542Z",
+     "start_time": "2024-12-26T12:10:42.771201Z"
     }
    },
    "id": "987dc47fb30c404",
-   "execution_count": 19
-  },
-  {
-   "cell_type": "code",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "np.int64(109)"
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.min([sum(d['arcs']) for u,v,d in g.edges(data=True)])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-12-23T15:05:51.808188Z",
-     "start_time": "2024-12-23T15:05:51.769517Z"
-    }
-   },
-   "id": "a693144e02e9f060",
-   "execution_count": 25
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "a = [0] * 19\n",
-    "a[0] = 1"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-12-23T15:05:22.574267Z",
-     "start_time": "2024-12-23T15:05:22.570930Z"
-    }
-   },
-   "id": "ee6248e680547c14",
-   "execution_count": 23
-  },
-  {
-   "cell_type": "code",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "[1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]"
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-12-23T15:05:23.584732Z",
-     "start_time": "2024-12-23T15:05:23.579262Z"
-    }
-   },
-   "id": "5130eb6d138c5e76",
-   "execution_count": 24
+   "execution_count": 89
   },
   {
    "cell_type": "code",
@@ -559,7 +636,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "97ddc46086f4e691"
+   "id": "c671d2b2270d59e7"
   }
  ],
  "metadata": {
